# personal-website

./: .dockerignore  .env.example  .eslintignore  .gitignore  Dockerfile  README.md  compose.staging.yaml  compose.yaml  db.sqlite3  db.sqlite3.example  docker-compose.yaml  next.config.ts  package-lock.json  package.json
.gitea/workflows/: build-and-deploy-prod.yaml  build-and-stage-deploy.yaml  build.yaml  deploy-prod.yaml  deploy-prod.yml  deploy-staging.yaml  deploy-staging.yml  lint-check.yml  migration-check.yml  test build.yaml
.next/: trace
backend/: .gitignore  README.md  pyproject.toml  pytest.ini  ruff.toml  run.py
backend/app/: __init__.py  db.py  decorators.py  models.py  utils.py
backend/app/models/: __init__.py  files.py  images.py  page_data.py  projects.py  user.py  users.py
backend/app/routes/: __init__.py  auth.py  decorators.py  files.py  images.py  page_data.py  projects.py  uploads.py  users.py
backend/instance/: config.example.py
backend/tests/: conftest.py  test_models.py  test_routes.py
backend/tests/instance/: config.py
frontend/: README.md
src/: payload-types.ts  payload.config.ts
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/blocks/: Callout.ts  CodeBlock.ts  HorizontalLine.ts
src/collections/: Blogs.ts  CertificationBadges.ts  CoverImages.ts  Icons.ts  Media.ts  Projects.ts  Tags.ts  TechStackIcons.ts  Users.ts
src/components/: AboutPageClient.tsx  AnimationContext.tsx  BlogClient.tsx  ExternalLinkModal.tsx  HomePageClient.tsx  LandingPageClient.tsx  Link.tsx  PageClient.tsx  RedirectAgent.tsx  (+3 more)
(+98 files in other folders)
