[project]
name = "backend"
version = "0.1.0"
description = "Simple backend for my personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "pyjwt>=2.10.1",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "-n auto --cov=app --cov-report=term-missing --no-cov-on-fail"
pythonpath = ["."]
